Fri Mar 17 19:48:07 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (check-mac):  Add.
	* compat_recv.c, get_fcreds.c, recvauth.c:  Eliminate Unix socket
	#includes, which are now handled by k5-int.h (via k5-config.h).
	* conv_princ.c:  Rename variable "comp" to another name; "comp"
	apparently bothers the MPW compiler...
	* rd_cred.c:  Avoid (void) casts of void functions, for MPW.
	* t_walk_rtree.c:  Put com_err.h after k5_int for <sys/types> stuff.
	(main):  Declare and initialize the krb5_context that's being
	passed to everything.

Fri Mar 10 10:58:59 1995  Chris Provenzano (proven@mit.edu)

	* auth_con.h auth_con.c Added for krb5_auth_con definition and
		support routines.

	* mk_req.c (krb5_mk_req())
	* mk_req_ext.c (krb5_mk_req_extended())
	* rd_rep.c (krb5_rd_rep())
	* sendauth.c (krb5_sendauth())
	* mk_priv.c (krb5_mk_priv())
	* mk_safe.c (krb5_mk_safe())
	* rd_priv.c (krb5_rd_priv())
	* rd_safe.c (krb5_rd_safe())
		Added a krb5_auth_context argument and eliminated many of 
		the other arguments because they are included in the
		krb5_auth_context structure.

	* send_tgs.c (krb5_send_tgs()) Eliminate call to krb5_mk_req_extended(),
		which does far more than krb5_send_tgs() needs.

Tue Mar  7 19:57:34 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_INCLUDE.

Tue Mar 7 13:20:06 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed library name on the pc.
	* parse.c: disabled for the PC error messages to stderr.
	* chk_trans.c: fixed signed/unsigned assignment.

Thu Mar 2 11:45:00 1995 Keith Vetter (keithv@fusion.com)
	
	* compat_recv.c, get_fcre.c, recvauth.c, sendauth.c: changed
	   NEED_WINSOCK_H to NEED_SOCKETS.

Wed Mar 1 20:15:00 1995 Keith Vetter (keithv@fusion.com)

	* compat_r.c, copy_pri.c, get_fcre.c, get_in_t.c, init_ctx.c, in_tkt_p.c
	   in_tkt_s.c, preauth.c, princ_co.c, pr_to_sa.c, rd_req_d.c, recvauth.c
	   sendauth.c, send_tgs.c, unparse.c: 16 vs 32 bit casts, removed some